# SnakeAI

./: .gitignore  README.md  config.py  evaluate.py  main.py  pyproject.toml  requirements.txt  train.py
agent/: dqn.py  memory.py  prioritized_memory.py
analysis/: compare_penalties.py  summary_table.py
plots/: summary_table.csv
snake_game/: game.py  utils.py  vector_env.py
tests/: test_dqn.py  test_game.py  test_memory.py  test_train.py  test_vector_env.py
utils/: __init__.py  logging.py  visualization.py
